# cpp17-automatic-serialization

./: CMakeLists.txt  README.md  main.cpp  rtti_test.cpp  rtti_test.h  settings.cmake
json/: json.hpp
rtti/: CMakeLists.txt  Creator.h  Equals.h  README.md  Rtti.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h
rtti_class/: CMakeLists.txt  Point.h  Rect.h  RttiClassManifest.cpp  SuperPoint.h
